race, experience and education

--- a/final_assignment_group_2.Rmd
+++ b/final_assignment_group_2.Rmd
@@ -777,6 +777,127 @@ t.test(tot_earnings_USD_log ~ gender, data = mkt_gender_uk)
 
 We can judge from above results that we cannot reject the null hypothesis $H_0$. Therefore, although on average, women earn more than men in **"Marketing, Advertising & PR"** sector, it is still not significant that men and women earn differently in statistical sense. 
 
+### Section 3.3 Race
+```{r}
+clean_data %>% 
+  filter(tot_earnings_USD<300000) %>% 
+  drop_na(race) %>% 
+  ggplot(aes(x = race,y = tot_earnings_USD))+
+  geom_boxplot()+
+  labs(title = "Total earning of different races",
+       subtitle = "for people with earnings ranged from 0 to 300000 USD",
+       x = "Race",
+       y = "Total earnings in USD")
+  
+```
+```{r}
+earning_race <- clean_data %>% 
+  group_by(race) %>% 
+  summarise (mean = mean(tot_earnings_USD), SD = sd(tot_earnings_USD), sample_size = n()) %>% 
+  mutate(se = sqrt(SD^2/sample_size), t_value = qt(p=.05/2, df=sample_size-1, lower.tail=FALSE),
+         margin_of_error = t_value*se, earning_low = mean-t_value*se, earning_high = mean+t_value*se)
+
+earning_race
+```
+```{r}
+# hypothesis testing using t.test() 
+t.test(tot_earnings_USD ~ race, data = clean_data %>% filter(race %in% c("Asian","Black")))
+```
+```{r}
+# hypothesis testing using t.test() 
+t.test(tot_earnings_USD ~ race, data = clean_data %>% filter(race %in% c("Asian","White")))
+```
+```{r}
+# hypothesis testing using t.test() 
+t.test(tot_earnings_USD ~ race, data = clean_data %>% filter(race %in% c("Asian","Hispanic")))
+```
+```{r}
+# hypothesis testing using t.test() 
+t.test(tot_earnings_USD ~ race, data = clean_data %>% filter(race %in% c("White","Black")))
+```
+```{r}
+# hypothesis testing using t.test() 
+t.test(tot_earnings_USD ~ race, data = clean_data %>% filter(race %in% c("White","Hispanic")))
+```
+```{r}
+# hypothesis testing using t.test() 
+t.test(tot_earnings_USD ~ race, data = clean_data %>% filter(race %in% c("Hispanic","Black")))
+```
+
+```{r, hypothesis_testing}
+
+
+# hypothesis testing using infer package
+set.seed(1234)
+
+earning_race_boot <- clean_data %>% 
+  drop_na(race) %>% 
+  filter(race %in% c("Asian","White")) %>% 
+  # Specify the variable of interest "salary" and group by gender
+  specify(tot_earnings_USD ~ race) %>% 
+  
+  # Hypothesize a null of no (or zero) difference
+  hypothesize (null = "independence") %>% 
+  
+  # Generate a bunch of simualted samples
+  generate (reps = 1000, type = "permute") %>% 
+  
+  # Find the mean diffference of each sample
+  calculate(stat = "diff in means",
+            order = c("Asian", "White"))
+
+
+# Select the low and high endpoint from the formula-calculated CIs
+formula_ci <- earning_race %>%
+  select(earning_low,earning_high)
+
+# Generate 95% percentile of the difference in the two genders' salaries from the bootstrap data
+percentile_ci <- earning_race_boot %>% 
+  get_confidence_interval(level = 0.95, type = "percentile")
+
+percentile_ci
+
+observed_difference <- earning_race$mean[1]-earning_race$mean[2]
+
+visualize(earning_race_boot) + 
+  annotate("rect", xmin=percentile_ci$lower_ci, xmax=percentile_ci$upper_ci, ymin=0, ymax=Inf, alpha=0.3, fill = "pink") +
+  #shade_ci(endpoints = percentile_ci,fill = "khaki")+
+  labs(title='Differences in White and Asian Mean Salary in a world where there is no difference', 
+       subtitle = "Observed difference marked in red",
+       x = "Mean (White salary - Asian salary)", y = "Count")+
+  geom_vline(xintercept = observed_difference, colour = "red", linetype="solid", size=1.2)+
+  theme_bw()+
+  NULL
+  
+```
+
+### Section 3.4 Education
+```{r}
+clean_data %>% 
+  filter(tot_earnings_USD<300000) %>% 
+  drop_na(highest_level_of_education_completed) %>% 
+  ggplot(aes(x = tot_earnings_USD, y = fct_reorder(highest_level_of_education_completed,tot_earnings_USD)))+
+  geom_boxplot()+
+  labs(title = "Total earning of people with different education level",
+       subtitle = "for people with earnings ranged from 0 to 300000 USD",
+       x = "Total earnings in USD",
+       y = "Highest level of education")
+  
+```
+
+### Section 3.5 Experience
+```{r}
+clean_data %>% 
+  filter(tot_earnings_USD<300000) %>% 
+  drop_na(overall_years_of_professional_experience) %>% 
+  ggplot(aes(x = tot_earnings_USD, y = fct_reorder(overall_years_of_professional_experience,tot_earnings_USD)))+
+  geom_boxplot()+
+  labs(title = "Total earning of people with difference oveall experience",
+       subtitle = "for people with earnings ranged from 0 to 300000 USD",
+       x = "Total earnings in USD",
+       y = "Overall experience")
+  
+```
 ## Section 4 - Analysis using Correlation and Linear Regression
 
 
